@@ -1,3 +1,7 @@
+    7 July 2013
+Checked that Unicode tables u2l and l2u are in agreement with latest 
+UnicodeData.txt (08-Aug-2012 13:06).
+
     2 July 2013
 fil$: Switching from input to output back to input did not work if the second
 input only had one argument - the input's file name.
